internal_k8s_course/configmap-deploy.yaml
# configmap-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configmap-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configmap-demo
  template:
    metadata:
      labels:
        app: configmap-demo
    spec:
      containers:
        - name: app
          image: busybox:1.36
          command: ["sleep", "3600"]
          volumeMounts:
            - name: config-vol
              mountPath: /etc/app
      volumes:
        - name: config-vol
          configMap:
            name: app-file-config
