internal_k8s_course/port-test-pod.yaml
 # port-test.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    name: port-test
  spec:
    nodeName: training-control-plane # must be on the node with the port mapping
    containers:
    - name: nginx
      image: nginx
      ports:
      - containerPort: 80
        hostPort: 80 # bind this pod to port 80 on the node
