internal_k8s_course/secret-deploy.yaml
# secret-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secret-demo
  template:
    metadata:
      labels:
        app: secret-demo
    spec:
      containers:
        - name: app
          image: busybox:1.36
          command: ["sleep", "3600"]
          volumeMounts:
            - name: secret-vol
              mountPath: /etc/secrets
      volumes:
        - name: secret-vol
          secret:
            secretName: app-secret
