internal_k8s_course/volume-deploy.yaml
# volume-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: volume-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: volume-demo
  template:
    metadata:
      labels:
        app: volume-demo
    spec:
      containers:
        - name: app
          image: busybox:1.36
          command: ["sleep", "3600"]
          volumeMounts:
            - name: storage
              mountPath: /app/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: app-pvc
